--- a/billing/overview.mdx
+++ b/billing/overview.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "总览"
+description: "Description of your new file."
 ---
-
