--- a/billing/payments.mdx
+++ b/billing/payments.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "支付账单"
+description: "Description of your new file."
 ---
-
