--- a/billing/subscriptions.mdx
+++ b/billing/subscriptions.mdx
@@ -1,5 +1,4 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "订阅"
+description: "Description of your new file."
 ---
-
