Documentation edits made through Mintlify web editor

--- a/getting-started.mdx
+++ b/getting-started.mdx
@@ -1,5 +1,5 @@
 ---
-title: " Getting started with the Vidau API | Vidau Docs"
+title: " Getting started with the Vidau API"
 description: "Get started with Vidau's powerful AI API platform by learning the basics. This guide will help you with the initial setup, authentication, and creating your first AI task."
 ---
 
