Documentation edits made through Mintlify web editor

--- a/overview/Introduction.mdx
+++ b/overview/Introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: " Getting started with the Vidau API"
-description: "Get started with Vidau's powerful AI API platform by learning the basics. This guide will help you with the initial setup, authentication, and creating your first AI task."
+title: " 产品介绍"
+description: "欢迎来到 Vidau AI 平台文档。"
 ---
 
 ## [介绍](#introduction)
