Documentation edits made through Mintlify web editor

--- a/overview/introduction.mdx
+++ b/overview/introduction.mdx
@@ -3,68 +3,25 @@ title: " 产品介绍"
 description: "欢迎来到 Vidau AI 平台文档。"
 ---
 
-## [介绍](#introduction)
+# 一、 概述与入门
+这部分的目标是让开发者快速了解你的API能做什么，并让他们在5分钟内完成第一个成功的API调用。
 
-欢迎来到 Vidau AI 平台文档。
+# API简介
 
-我们的使命：让任何团队都能以**低成本**和**无需AI专业知识**的方式集成人工智能功能。
+它是什么？ 用一两句话清晰说明API的核心功能和价值。
 
-我们自主研发的 [NeuralCore引擎®](https://vidau.com/neuralcore-engine/) 提供高质量的AI服务，具备**毫秒级响应速度**。我们从头构建了这个独特的平台，部署在自有的云计算基础设施上。通过从操作系统层面向上优化整个AI技术栈，我们实现了卓越的性能和成本效益，并直接传递给用户。
+它能做什么？ 列出主要的功能特性（例如：用户管理、支付处理、数据查询）。
 
-Vidau API是接入我们平台的门户，提供**极致灵活性**和无缝集成到任何业务流程中。无论您是经验丰富的开发者还是刚刚起步，我们的文档都将指导您轻松创建智能应用。
+目标用户是谁？ 明确说明API主要面向哪类开发者。
 
-## [API功能特性](#api-features)
+# 快速开始
 
-Vidau通过API提供一套强大的AI功能套件。
+“5分钟上手”指南：提供一个最简化的、步骤式的教程，引导开发者完成第一个API调用。
 
-## [快速开始](#getting-started)
+## 核心步骤：
 
-开始使用Vidau API：
+注册/登录：如何获取账户。
 
-1. [注册](https://console.vidau.com/signup) Vidau账户
-2. 从控制台获取您的API密钥
-3. 学习如何[连接和认证](https://docs.vidau.com/getting-started/how-to-connect)我们的API
-4. 使用我们的[API参考文档](https://docs.vidau.com/ai-inference/api-reference)尝试第一个请求
+获取API密钥：如何找到或生成认证凭证（API Key, Secret等）。
 
-我们的文档包含详细指南、API参考和示例，帮助您快速有效地将AI功能集成到应用中。
-
-## [核心API概念](#core-api-concepts)
-
-Vidau API在所有服务中遵循一致的设计模式。理解这些核心概念将帮助您有效地使用我们的所有端点。
-
-### [任务基础架构](#task-based-architecture)
-
-我们的API围绕**任务**概念构建。每个请求代表要执行的特定任务，如文本分析、图像识别或语音处理。这种任务基础架构实现了：
-
-- 跨不同功能的一致请求结构
-- 计算密集型操作的异步处理
-- 基于任务需求的高效资源分配
-
-每个API调用接受对象数组作为输入，其中每个对象代表要执行的单个**任务**。您可以在单个请求中发送任意数量的任务，每个任务都将独立处理。每个对象的结构根据任务类型而变化。
-
-### [通用请求参数](#common-request-parameters)
-
-每个API请求共享这些基本参数：
-
-- taskType: 标识要执行的操作（textAnalysis, imageRecognition, speechProcessing）
-- taskId: 您生成的唯一标识符，用于跟踪请求和匹配响应。如果任务失败或出现意外行为，在联系支持时提taskId能帮助我们快速定位请求并提供帮助
-- includeCost: 可选标志，用于在响应中包含成本信息
-
-```json
-
-[
-
-  {
-
-    "taskType": "textAnalysis",
-
-    "taskId": "a770f077-f413-47de-9dac-be0b26a35da6",
-
-    "includeCost": true,
-
-    // 任务特定参数...
-
-  }
-
-]
-```
+第一个API调用示例：提供一个最简单的、可立即运行的代码示例（如使用cURL），并展示预期的成功响应。
