--- a/api/api.mdx
+++ b/api/api.mdx
@@ -1,25 +1,25 @@
 ---
-title: "接口文档说明"
-description: "接口文档说明"
+title "接口文档说明"
+description "接口文档说明"
 ---
 
 **创建任务接口**
 
-| Plain Text<br />POST https://open.vidau.ai/v1/video/createTask |
-| :------------------------------------------------------------- |
+| Plain Text<br />POST https//open.vidau.ai/v1/video/createTask |
+| ------------------------------------------------------------- |
 
 **请求头**
 
 | 字段            | 值                     | 描述                            |
-| :------------ | :-------------------- | :---------------------------- |
+| ------------ | -------------------- | ---------------------------- |
 | Content-Type  | application/json      | 数据交换格式                        |
 | Authorization | Bearer {your api key} | 将 {your api key} 替换为您的 Bearer |
 
 **请求体**
 
 | 参数名称            | 类型            | 必填 | 参数描述                                                                                                                                                                                                                                                                                            |
-| :-------------- | :------------ | :-- | :---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| model           | String        | 是  | 模型名称  • Sora 2：sora@2:normal  • Sora 2 pro: sora@2:pro  • Veo 3.1: veo@31:normal  • Veo 3.1 fast: veo@31:fast  • seedance 1.0 pro: seedance@1:pro  • Seedance 1.0 pro fast: seedance@1:pro_fast  • Vidu q2 turbo: vidu@q2:turbo  • Vidu q2 pro: vidu@q2:pro  • wan 2.5 preview: wan@2.5:preview |
+| -------------- | ------------ | -- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| model           | String        | 是  | 模型名称  - Sora 2：sora@2normal  - Sora 2 pro sora@2pro  - Veo 3.1 veo@31normal  - Veo 3.1 fast veo@31fast  - seedance 1.0 pro seedance@1pro  - Seedance 1.0 pro fast seedance@1pro_fast  - Vidu q2 turbo vidu@q2turbo  - Vidu q2 pro vidu@q2pro  - wan 2.5 preview wan@2.5preview |
 | taskUUID        | String        | 可选 | 创建任务ID，没有随机初始化，参考值：f5739925-fa8f-41c8-8f33-88aeba1ed365                                                                                                                                                                                                                                         |
 | prompt          | String        | 是  | 文本提示词<br />生成视频的文本描述。<br />注1：字符长度不能超过 2000 个字符                                                                                                                                                                                                                                                 |
 | negative_prompt | String        | 可选 | 文本负向提示词<br />生成视频的文本描述。<br />注1：字符长度不能超过 2000 个字符                                                                                                                                                                                                                                               |
@@ -35,7 +35,7 @@ description: "接口文档说明"
 **响应体**
 
 | 字段       | 类型     | 描述                              |
-| :------- | :----- | :------------------------------ |
+| ------- | ----- | ------------------------------ |
 | code     | String | 生成状态码，创建成功，默认值为200，异常情况，见错误码列表  |
 | taskUUID | String | 创建任务ID不为空，则返回原值，创建任务ID为空，则返回随机值 |
 | message  | String | 日志信息                            |
@@ -44,26 +44,26 @@ description: "接口文档说明"
 
 **查询任务接口**
 
-| Plain Text<br />GET https://open.vidau.ai/v1/queryTask/{taskUUID}/creations |
-| :-------------------------------------------------------------------------- |
+| Plain Text<br />GET https//open.vidau.ai/v1/queryTask/{taskUUID}/creations |
+| -------------------------------------------------------------------------- |
 
 **请求头**
 
 | 字段            | 值                     | 描述                            |
-| :------------ | :-------------------- | :---------------------------- |
+| ------------ | -------------------- | ---------------------------- |
 | Content-Type  | application/json      | 数据交换格式                        |
 | Authorization | Bearer {your api key} | 将 {your api key} 替换为您的 Bearer |
 
-**请求体**
+**路径参数**
 
 | 参数名称     | 类型     | 必填 | 参数描述               |
-| :------- | :----- | :-- | :----------------- |
+| ------- | ----- | -- | ----------------- |
 | taskUUID | String | 是  | 任务id，由创建任务接口创建成功返回 |
 
 **响应体**
 
 | 字段      | 类型     | 描述                                                                                |
-| :------ | :----- | :-------------------------------------------------------------------------------- |
+| ------ | ----- | -------------------------------------------------------------------------------- |
 | code    | String | 生成状态码，创建成功，默认值为200，异常情况，见错误码列表                                                    |
 | task    | String | 处理状态：<br />queued  任务排队中<br />running  任务处理中<br />successed 任务成功<br />failed 任务失败 |
 | message | String | 日志信息                                                                              |
@@ -74,12 +74,12 @@ description: "接口文档说明"
 **错误码**
 
 | HTTP CODE | 错误码                        | 错误信息                                       | 错误描述                                                                                          |
-| :-------- | :------------------------- | :----------------------------------------- | :-------------------------------------------------------------------------------------------- |
+| -------- | ------------------------- | ----------------------------------------- | -------------------------------------------------------------------------------------------- |
 | 400       | BadRequest                 | bad request                                | 不合法的请求                                                                                        |
-| 400       | FieldLacking               | field is missing or empty: {{.fields}}     | 缺少字段,具体字段见错误信息                                                                                |
-| 400       | FieldUnwanted              | unwanted field: {{.fields}}                | 不需要传某些字段，具体字段见错误信息                                                                            |
-| 400       | FieldItemCountOutOfRange   | field item count out of range: {{.fields}} | 字段超限制                                                                                         |
-| 400       | PageSizeOutOfRange         | page size out of range                     | 图像尺寸有问题。要求：图片大小需小于50M,格式只支持 jpg/jpeg/png/webp, 图片长宽比需要小于1:4或者4:1，跳舞特效的图片长宽比需要在 1:1.2 至 1:2 之间 |
+| 400       | FieldLacking               | field is missing or empty {{.fields}}     | 缺少字段,具体字段见错误信息                                                                                |
+| 400       | FieldUnwanted              | unwanted field {{.fields}}                | 不需要传某些字段，具体字段见错误信息                                                                            |
+| 400       | FieldItemCountOutOfRange   | field item count out of range {{.fields}} | 字段超限制                                                                                         |
+| 400       | PageSizeOutOfRange         | page size out of range                     | 图像尺寸有问题。要求：图片大小需小于50M,格式只支持 jpg/jpeg/png/webp, 图片长宽比需要小于14或者41，跳舞特效的图片长宽比需要在 11.2 至 12 之间 |
 | 400       | ImageDownloadFailure       | image download failure                     | 下载用户图片url失败，请检查链接的有效性                                                                         |
 | 400       | OperationInProcess         | operation in process, please retry later   | 请求在处理中                                                                                        |
 | 400       | TaskPromptPolicyViolation  | prompt policy violation                    | Prompt 触发安审风控                                                                                 |
@@ -89,9 +89,9 @@ description: "接口文档说明"
 | 400       | CreationPolicyViolation    | creation policy violation                  | 生成物触发风控                                                                                       |
 | 400       | ModelUnavailable           | model unavailable                          | 请求的模型不可用，调用任务失败，请检查模型类型并重试                                                                    |
 | 400       | UserCancelled              | user cancelled                             | 用户手动终止任务执行                                                                                    |
-| 400       | FieldInvalid               | invalid field: {{.fields}}                 | 传入参数未通过合法性校验                                                                                  |
+| 400       | FieldInvalid               | invalid field {{.fields}}                 | 传入参数未通过合法性校验                                                                                  |
 | 400       | ImageCheckBodyJointsFailed | Image Check Body Joins Failed              | 输入图人体检测失败，请重新上传                                                                               |
-| 400       | ImageCheckFaceFailed       | mage Check Face Failed                     | 输入图人脸检测失败，请重新上传                                                                               |
+| 400       | ImageCheckFaceFailed       | Image Check Face Failed                     | 输入图人脸检测失败，请重新上传                                                                               |
 | 400       | ImageObjectsUndetected     | Image BodyJoins or Face Too Much Occlusion | 输入图的人体或人脸有遮挡，请重新上传                                                                            |
 | 401       | Unauthorized               | unauthorized                               | 未鉴权                                                                                           |
 | 403       | Forbidden                  | forbidden                                  | 请求没有权限                                                                                        |
